starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__disclose__tests__disclose_binary_expression.snap
---
source: starstream-compiler/src/parser/expression/primary/disclose.rs
description: "Code:\n\ndisclose(a + b)"
---
Spanned {
    node: Disclose {
        expr: Spanned {
            node: Binary {
                op: Add,
                left: Spanned {
                    node: ScopedName(
                        [
                            Identifier {
                                name: "a",
                                span: 9..10,
                            },
                        ],
                    ),
                    span: 9..11,
                },
                right: Spanned {
                    node: ScopedName(
                        [
                            Identifier {
                                name: "b",
                                span: 13..14,
                            },
                        ],
                    ),
                    span: 13..14,
                },
            },
            span: 9..14,
        },
    },
    span: 0..15,
}
