starstream-compiler/src/parser/expression/primary/snapshots/starstream_compiler__parser__expression__primary__disclose__tests__disclose_identifier.snap
---
source: starstream-compiler/src/parser/expression/primary/disclose.rs
description: "Code:\n\ndisclose(x)"
---
Spanned {
    node: Disclose {
        expr: Spanned {
            node: ScopedName(
                [
                    Identifier {
                        name: "x",
                        span: 9..10,
                    },
                ],
            ),
            span: 9..10,
        },
    },
    span: 0..11,
}
